changed app name in privacy policy

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,6 +1,6 @@
-<h2 style="text-align: center;">PRIVACY POLICY MODEL FOR POKEMON FIND</h2>
+<h2 style="text-align: center;">PRIVACY POLICY MODEL FOR POKE-NOTIFY</h2>
 <p></p>
-<p>This privacy policy governs your use of the software application Pokemon Find (“Application”) for mobile devices. Pokemon Find&nbsp;is a map for pokemon go, that shows you exactly which pokemon are around you in real time!
+<p>This privacy policy governs your use of the software application Poke-Notify (“Application”) for mobile devices. Poke-Notify&nbsp;is a map for pokemon go, that shows you exactly which pokemon are around you in real time!
 &nbsp;</p>
 <h4>&nbsp;</h4>
 <h4>The application uses the user's geo location and draws the most nearby pokemon on a map for him</h4>
